# FdFRemastered

./: CMakeLists.txt  FdFRemastered  Map.h  kappa  main.cpp  newkappa  parser.cpp  parser.h  screen.cpp  screen.h  sdl-library.cpp  sdl-library.h  triangle.h  viewport.cpp  viewport.h
MathTypes/: PlaneMath.h  mat4.h  vec3.h  vec4.h
etc/: terminal-colors.h
